Fix positioning and overflow of components, Add Button

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,46 +1,54 @@
-nav {
-    background: linear-gradient(0deg, #5469B4, #5469B4), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
-    border: 1px solid #000000;
-    width: 100%;
-    height: 4rem;
-    box-sizing: border-box;
-    padding: 0 1rem;
+.app {
+    height: 100vh;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: fixed;
-    z-index: 10;
+    flex-direction: column;
+    padding: 0;
+    box-sizing: border-box;
 
-    .searchBox {
-        background-color: #D9D9D9;
-        box-shadow: 0px 4px 4px 0px #00000040;
+    nav {
+        background: linear-gradient(0deg, #5469B4, #5469B4), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
         border: 1px solid #000000;
-        border-radius: 10px;
-        width: 30%;
-        display: flex;
-        align-items: center;
-        padding: 0 1rem;
+        width: 100%;
+        height: 4rem;
         box-sizing: border-box;
+        padding: 0 1rem;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
 
-        input[type="text"] {
-            outline: none;
-            border: none;
-            background: rgba(255, 255, 255, 0);
-            font-size: 1rem;
-            padding: 0.5rem 0;
-            width: 100%;
-        }
-
-        button {
-            outline: none;
-            border: none;
-            background: rgba(255, 255, 255, 0);
-            cursor: pointer;
-
-            img {
-                width: 25px;
-                height: 25px;
+        .searchBox {
+            background-color: #D9D9D9;
+            box-shadow: 0px 4px 4px 0px #00000040;
+            border: 1px solid #000000;
+            border-radius: 10px;
+            width: 30%;
+            display: flex;
+            align-items: center;
+            padding: 0 1rem;
+            box-sizing: border-box;
+    
+            input[type="text"] {
+                outline: none;
+                border: none;
+                background: rgba(255, 255, 255, 0);
+                font-size: 1rem;
+                padding: 0.5rem 0;
+                width: 100%;
+            }
+    
+            button {
+                outline: none;
+                border: none;
+                background: rgba(255, 255, 255, 0);
+                cursor: pointer;
+    
+                img {
+                    width: 25px;
+                    height: 25px;
+                }
             }
         }
     }
 }
+
+
