--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,17 +1,14 @@
 main {
-    min-height: 100vh;
-    padding-top: 4rem;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     box-sizing: border-box;
-    display: flex;
+    overflow: hidden;
 
     aside#sidebar {
-        position: fixed;
-        width: 25%;
         height: 100%;
-        top: 4rem;
-
         box-sizing: border-box;
-        padding: 2.5rem 2px 2.5rem 3.5rem;
+        padding: 2rem 2px 2rem 2.5rem;
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
@@ -67,23 +64,43 @@ main {
     }
 
     section {
-        flex: 1;
-        margin-left: 25%;
-        padding: 2.5rem;
         box-sizing: border-box;
+        height: 100%;
+        padding: 2rem;
+        overflow: hidden;
 
         div#recipeList {
-            min-height: 100%;
             background: #FFFFFF;
             box-shadow: 0px 4px 4px 0px #00000040;
             border-radius: 15px;
-            padding: 2.5rem;
+            padding: 2rem;
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
             gap: 1rem;
             align-items: center;
-            justify-content: center;
+            overflow-y: auto;
+            height: 100%;
+            position: relative;
+
+            button.newRecipeButton {
+                border-radius: 50%;
+                background-color: #435490;
+                box-sizing: border-box;
+                outline: none;
+                border: none;
+                padding: 0.85rem;
+                width: 50px;
+                height: 50px;
+                cursor: pointer;
+                position: absolute;
+                right: 1rem;
+                top: 1rem;
+
+                img {
+                    width: 100%;
+                }
+            }
 
             h1.emptyRecipe {
                 font-size: 2rem;
@@ -97,7 +114,6 @@ main {
                 border-radius: 15px;
                 display: flex;
                 box-sizing: border-box;
-                overflow: hidden;
 
                 div.imageHolder {
                     position: relative;
@@ -164,6 +180,10 @@ main {
             .line {
                 border-top: 1px solid #435490;
                 width: 100%;
+                
+                &.line:last-child {
+                    display: none;
+                }
             }
         }
     }
